--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,455 @@
+body.scrollfix{
+    overflow: hidden;
+}
 .header{
     width: 100%;
-    padding: 0 20px;
-    height: 80px;
+    height: 10rem;
+    top: 0;
+    left: 0;
+    position: sticky;
+    z-index: 11;
+    background-color: rgb(255,241,240);
+    backdrop-filter: blur(10px);
+}
+.header.active{
+    border-bottom: 1px solid #ececec;
+    background-color: transparent;
+}
+.header .inner{
     display: flex;
     justify-content: space-between;
+    height: 100%;
     align-items: center;
-    border-bottom: 1px solid #000;
 }
-.header ul{
+.header .inner .logo{
+    height: 6rem;
+}
+.header .inner .logo a{
+    height: 100%;
+    display: block;
+}
+.header .inner .logo a img{
+    height: 100%;
+}
+.header-menu{
     display: flex;
-    gap: 20px;
+    gap: 5rem;
+    font-size: 2rem;
+    color: #d85252;
+}
+.header-menu li{
+    position: relative;
+}
+.header-menu li a{}
+.header-menu li a i{}
+.header-menu li a span{
+    position: absolute;
+    display: block;
+    bottom: -4rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #d85252;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: 0.3s;
+}
+.header-menu li:hover a span{
+    opacity: 1;
+
+}
+/* home */
+.home{
+    height: calc(100vh - 10rem);
+    background-color: rgb(255,241,240);
+}
+.home .inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 5vw;
+    text-align: center;
+    line-height: 1.5s;
+    
+}
+.home-text{
+    font-family: 'JalnanGothic';
+    display: inline-block;
+}
+/*profile*/
+.profile{
+    padding: 15rem 0;
+}
+.profile-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.profile-img{
+    width: 30%;
+}
+.profile-img img{
+    width: 100%;
+}
+.profile-text{
+    width: 65%;
+    position: relative;
+    text-align: center;
+    border-radius: 15px;
+    padding: 5rem 2rem;
+    box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+    font-size: 2rem;
+}
+.profile-text h1{
+    font-size: 3.5rem;
+    font-weight: 600;
+    margin-bottom: 4rem;
+}
+.profile-text p{
+    line-height: 1.5;
+}
+.profile-btm{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3rem;
+    padding: 4rem 0;
+    box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+    border-radius: 12px;
+}
+.profile-btm .contbox{
+    flex: 1;
+    padding: 0 3.5rem;
+}
+.profile-btm .contbox:not(:last-child){
+    border-right: 1px solid #ececec;
+}
+.profile-btm .contbox h2{
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 2rem;
+}
+.profile-btm .contbox h2 i{
+    margin-right: 10px;
+}
+.profile-btm .contbox ul{}
+.profile-btm .contbox ul li{
+    display: flex;
+    line-height: 1.6;
+}
+.profile-btm .contbox ul li:not(:last-child){
+    margin-bottom: 10px;
+}
+.profile-btm .contbox ul li span{
+    width: 100px;
+    display: inline-block;
+}
+.profile-btm .contbox ul li p{
+    width: calc(100% - 100px);
+}
+
+@media screen and (max-width: 1024px){
+    .profile-top{
+        flex-direction: column;
+    }
+    .profile-img{
+        width: 100%;
+        max-width: 300px;
+        margin-bottom: 30px;
+    }
+    .profile-text{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 768px){
+    .profile-btm{
+        flex-direction: column;
+        gap: 30px;
+    }
+    .profile-btm .contbox:not(:last-child){
+        border: none;
+    }
+   
+}
+/*포트폴리오*/
+.portfolio{
+    padding: 15rem 0;
+    background-color: #fafafa;
+}
+.portfolio-wrap{
+    position: relative;
+    padding: 0 6rem;
+}
+.sw-portfolio{}
+.sw-portfolio ul{}
+.sw-portfolio ul li{
+    display: flex;
+    background-color: #fff;
+    padding: 5rem;
+    border-radius: 2rem;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.pf-thumb{
+    border: 1px solid #eee;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 50%;
+    font-size: 0;
+}
+.pf-thumb img{
+    width: 100%;
+}
+.pf-text{
+    width: 45%;
+}
+.pf-text h2{
+    padding: 10px;
+    font-size: 2.5rem;
+    background-color: #d85252;
+    display: inline-block;
+    border-radius: 5px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.pf-text p{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+.pf-text .tool{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.pf-text .tool p{
+    margin-bottom: 0;
+}
+.pf-text .tool > div{
+    width: 3rem;
+    height: 3rem;
+}
+.pf-text .tool .ic-ae{
+    background: url(../img/round_after_effects.png)
+    no-repeat center / cover;
+}
+.pf-text .tool .ic-pro{
+    background: url(../img/round_premiere.png)
+    no-repeat center / cover;
+}
+.pf-text .tool .ic-photo{
+    background: url(../img/round_photoshop.png)
+    no-repeat center / cover;
+}
+.pf-text .tool .ic-illust{
+    background: url(../img/round_illust.png)
+    no-repeat center / cover;
+}
+.pf-text .view-btn{
+    margin-top: 3rem;
+    font-size: 2rem;
+    border-radius: 50px;
+    border: 3px solid #d85252;
+    color: #d85252;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: 0.5s;
+    display: inline-block;
+}
+.pf-text .view-btn:hover{
+    color: #fff;
+    background-color: #d85252;
+}
+.pf-arrow{
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+    width: 5rem;
+    height: 5rem;
+    background-color:#e6e6e6;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.portfolio-prev{
+    left: 0;
+}
+.portfolio-next{
+    right: 0;
+}
+@media screen and (max-width: 1024px){
+  
+}
+@media screen and (max-width: 768px){
+    .portfolio-wrap{padding: 0;}
+    .sw-portfolio ul li{
+        flex-direction: column;
+    }
+    .pf-thumb{width: 100%; margin-bottom: 30px;}
+    .pf-text{width: 100%;}
+    .pf-arrow{display: none;}
+   
+}
+/*모달*/
+.modal{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0,0,0,0.5);
+    top: 0;
+    left: 0;
+    z-index: 21;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+}
+.modal.active{
+    opacity: 1;
+    visibility: visible;
+}
+.modal .close-btn{
+    position: absolute;
+    top: 2rem;
+    right: 2.5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    background-color: #fff;
+    cursor: pointer;
+    color: #8b1414;
+    font-size: 3rem;
+}
+.modal-cont{
+    width: 95%;
+    height: 80%;
+    /*background-color: #fff;*/
+
+}
+.modal-cont iframe{
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+/*스킬*/
+.skill{
+    padding: 15rem 0;
+}
+.skill-wrap{
+    display: flex;
+    flex-wrap: wrap ;
+    justify-content: space-between;
+}
+.skill-wrap ul{
+    width: 45%;
+}
+.skill-wrap ul li{}
+.skill-wrap ul li:not(:last-child){
+    margin-bottom: 5rem;
+}
+.skill-wrap ul li .top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.skill-wrap ul li .top .icon{
+    width: 15%;
+}
+.skill-wrap ul li .top .icon img{
+    width: 100%;
+}
+.skill-wrap ul li .top .progress{
+    width: 80%;
+    
+}
+.skill-wrap ul li .btm{
+    padding-left: 20%;
+    line-height: 1.5;
+    font-size: 1.8rem;
+}
+.progressbar-text{
+    color: #000 !important;
+    font-size: 2rem;
+    left: auto !important;
+    right: 0;
+    transform: translateY(-50%) !important;
+}
+@media screen and (max-width: 1024px){
+   
+}
+@media screen and (max-width: 768px){
+    .skill-wrap{gap: 5rem;}
+    .skill-wrap ul{width: 100%;}
+   
+}
+/*contact*/
+.contact{
+    padding: 15rem 0;
+}
+.contact-wrap{
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+}
+.mail-form{
+    font-size: 2rem;
+    margin-bottom: 5rem;
+}
+.mail-form input,
+.mail-form textarea{
+    width: 100%;
+    height: 5rem;
+    margin: 10px 0 20px;
+    border: 2px solid #000;
+    padding: 0 10px;
+}
+.mail-form textarea{
+    height: 10rem;
+    padding: 10px;
+}
+.mail-form .btn{
+    width: 100%;
+    height: 5rem;
+    bottom: none;
+    background-color: #8b1414;
+    color:#fff;
+    cursor: pointer;
+}
+.success-mail{
+    bottom: 1px solid #8b1414;
+    display: inline-block;
+    padding: 5rem;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 2rem;
+}
+.success-mail a{
+    display: inline-block;
+    margin-top: 3rem;
+    padding: 10px 20px;
+    bottom: 2px solid #8b1414 ;
+    border-radius: 50px;
+    color: #8b1414;
+}
+.contact-wrap .icon-wrap{
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+}
+.contact-wrap .icon-wrap li{
+    width: 15%;
+}
+.contact-wrap .icon-wrap li img{
+    width: 100%;
 }
