네비게이션 구현

--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
 a{text-decoration: none;}
 ul,ol{list-style: none;}
 img{max-width: 100%;}
-html{font-size: 10px;}
+html{font-size: 10px; scroll-behavior: smooth;}
 body{font-size: 1.6rem; color: #222;  font-family: 'SCoreDream';
 font-weight: 400; overflow-x: hidden;
 }
